# ProyectoDispenser

./: .cproject  .gitignore  .project  partitions.csv
main/: CMakeLists.txt  buzzer.c  buzzer.h  http_server.c  http_server.h  idf_component.yml  keypad.c  keypad.h  lcd_driver.c  lcd_driver.h  local_db.c  local_db.h  main.c  rfid.c  rfid.h  root.html  state_machine.c  state_machine.h  time_sync.c  time_sync.h
